# voronota

./: .cproject  .gitattributes  .gitignore  .hgignore  .project  CMakeLists.txt  CNAME  LICENSE  LICENSE.txt  README  README.markdown  README.md  autodist.bash  autoflow.bash  document.bash  index.html  intro.markdown  latest_release_version.txt  manpage.troff  package.bash  stock.bash  test.bash  version.bash  voronota-bfactor  voronota-cadscore  voronota-contacts  voronota-membrane  voronota-memplace  voronota-pocket  voronota-resources  voronota-runscript  voronota-volumes  voronota-voromqa  voronota.man
expansion_gl/: .gitignore  CMakeLists.txt  README.markdown  README.md  document.bash  index.html  package.bash  shader_fragment_screen.glsl  shader_fragment_simple.glsl  shader_fragment_with_impostoring.glsl  shader_vertex_simple.glsl  shader_vertex_with_impostoring.glsl  shader_vertex_with_instancing.glsl  stock_default_fonts.bash  stock_default_shaders.bash
expansion_gl/shaders/: shader_fragment_screen.glsl  shader_fragment_simple.glsl  shader_fragment_with_impostoring.glsl  shader_vertex_screen.glsl  shader_vertex_simple.glsl  shader_vertex_with_instancing.glsl
expansion_gl/src/: voronota_gl.cpp
expansion_gl/web/: .gitignore  2zsk.js  build.bash  dun2010bbdep.js  ensemble.vses  font.js  iframes_demo.html  index.html  index0.html  index_iframes_example.html  pack.bash  special_demo.html  test.html  voronota-viewer-app.js  voronota_viewer.js
expansion_js/: .gitignore  CMakeLists.txt  README.markdown  README.md  document.bash  generate_preview.bash  index.html  ligand_cadscore_info.html  package.bash  stock_data_resources.bash  test.bash  voronota-js-fast-iface-akbps  voronota-js-fast-iface-akbps-layered  voronota-js-fast-iface-areas-layered  voronota-js-fast-iface-cadscore  voronota-js-fast-iface-cadscore-matrix  voronota-js-fast-iface-characterize-topology  voronota-js-fast-iface-contacts  voronota-js-fast-iface-data-graph  voronota-js-fast-iface-data-graph-v2  voronota-js-fast-iface-data-graph-v2-stats  voronota-js-fast-iface-visualize  voronota-js-fast-iface-voromqa  voronota-js-focused-relax-with-openmm  voronota-js-global-cadscore  voronota-js-global-cadscore-matrix  voronota-js-iface-visualize  voronota-js-ifeatures-voromqa  voronota-js-ligand-cadscore  voronota-js-lt-data-graph  voronota-js-lt-graph  voronota-js-membrane-voromqa  voronota-js-only-global-voromqa  voronota-js-pdb-utensil-detect-inter-structure-contacts  voronota-js-pdb-utensil-download-structure  voronota-js-pdb-utensil-filter-atoms  voronota-js-pdb-utensil-gather-ensemble  voronota-js-pdb-utensil-print-sequence-from-structure  voronota-js-pdb-utensil-rename-chains  voronota-js-pdb-utensil-renumber-by-sequence  (+8 more)
expansion_js/resources/: mock_voromqa_energy_potential  more_atom_types  script_examples  voromqa_v1_energy_potential_alt
expansion_js/src/: voronota_js.cpp
expansion_js/tests/: .gitignore  run_all.bash  run_all_job_scripts.bash  run_some_job_scripts_with_partial_update.bash
expansion_lt/: .gitignore  CMakeLists.txt  README.md  VERSION.txt  document.bash  index.html  package.bash  test.bash  version.bash
expansion_lt/benchmark/: README.md  document.bash  index.html  pdb_ids_chain_chain_areas.tsv  pdb_ids_sizes_correlations_times.tsv  summary_of_pearson_cor_coeffs.txt  volumes_and_sasa_and_calculation_times_in_comparison_with_sbl_vorlume.tsv
expansion_lt/cosmopolitan/: .gitignore  build.bash  copy_to_release.bash  package.bash  voronota-lt
expansion_lt/metascripts/: analyze_new_and_old_running_times.bash  analyze_new_parallel_running_times.bash  analyze_parallelization_perfromance.bash  compare_new_and_new_old_regime_contact_area_values.bash  compare_new_and_old_contact_area_values.bash  compare_new_and_old_sasa_values.bash  compare_new_aw_and_old_aw_contact_area_values.bash  compare_new_sasa_and_old_sasa_values.bash  compare_new_volume_and_old_volume_values.bash  compare_rt_and_aw_atom_level_contact_areas.bash  compare_rt_and_aw_residue_level_contact_areas.bash  generate_cell_graphics.bash  generate_graphics_drawing_script_for_pymol.bash  generate_tricky_cases_graphics.bash  summarize_inter_chain_interface_topology.bash
expansion_lt/src/: voronota_lt.cpp  voronota_lt.h
expansion_lt/swig/: .gitignore  README.md  compile_voronotalt_python.bash  python_compile_library.bash  python_run_usage_example.py  test_run_voronotalt_python.py  voronotalt.h  voronotalt.i  voronotalt_python.i  voronotalt_python.py  voronotalt_python_biotite.py  voronotalt_python_wrap.cxx
expansion_lt/tests/: run_all_tests.bash  run_basic_tests.bash  run_tutorial_tests.bash
expansion_lt/web/: build.bash  index.html  voronota_lt_web.cpp  voronota_lt_web.js  voronota_lt_web.wasm
expansion_lt_cadscore/: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  document.bash  index.html  package.bash  test.bash  version.bash
expansion_lt_cadscore/cosmopolitan/: .gitignore  build.bash  package.bash
expansion_lt_cadscore/src/: cadscore.h  cadscore_lt.cpp  envutil.h  sequtil.h  voronota_lt_cadscore.cpp
expansion_lt_cadscore/swig/: .gitignore  README.md  cadscorelt.h  cadscorelt_python.i  cadscorelt_python_wrap.cxx  compile_cadscorelt_python.bash
expansion_lt_cadscore/tests/: full_log  run_all_tests.bash  run_basic_tests.bash  run_polymorphic_tests.bash  run_protein_ligand_part2_tests.bash  run_protein_ligand_tests.bash  run_protein_rna_tests.bash  run_tutorial_part1_tests.bash  run_tutorial_part2_tests.bash
viewer/: .gitignore  CMakeLists.txt  generate_duktaper_preview.bash  shader_fragment_simple.glsl  shader_vertex_with_instancing.glsl  stock_data_resources.bash  stock_default_shaders.bash  voronota-duktaper-voromqa
viewer/scripts/: cameo_qa.js  casp_qa.js  complex_qa.js  fetch.js  gif.js  image.js  nnport_voromqa_dark.js  scwrl.js  tmalign.js
viewer/src/: voronota_duktaper.cpp  voronota_viewer.cpp
viewer/web/: 2zsk.data  2zsk.js  build.bash  index.html  pack.bash  radii.data  radii.js  shader_fragment_simple.js  shader_vertex_simple.data  shader_vertex_simple.js  shader_vertex_with_instancing.js  (+8 more)
(+2922 files in other folders)
